--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
+    "next": "^13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +39,7 @@
     "@storybook/react": "7.0.21",
     "@storybook/testing-library": "0.0.14-next.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@wixc3/react-board": "2.2.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-tailwindcss": "^3.12.1",
