--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "next": "^13.4.7",
+    "next": "^13.4.12",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,7 +44,7 @@
     "eslint-plugin-tailwindcss": "^3.12.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.8.8",
+    "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "storybook": "7.0.21"
   }
