--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-tailwindcss": "^3.12.1",
     "eslint-plugin-unicorn": "^47.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "3.0.0",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "storybook": "7.0.21"
   }
